--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,39 @@ img {
 </style>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="..">Immigration Dataset Project</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="about" class="active">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="overall">Overall</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Data by Country</a></li>
+            <li><a href="#">Admissions</a></li>
+            <li><a href="#">Data by Year</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Visuals</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+  </nav>
 <h1>CORGIS Data Lab</h1>
 <p>This data is from the CORGIS Dataset Project and can be found at <a href="https://think.cs.vt.edu/corgis/json/immigration/immigration.html">https://think.cs.vt.edu/corgis/json/immigration/immigration.html</a></p>
 <p>This data contains statistics about immigration into the United States from countries around the world between 2005-2014. Including data such as <ul><li>Enforcement of Immigration Security</li><li>Naturalizations</li><li>Legal Permanent Residences</li><li>Nonimmigrant Admissions</li></ul> </p>
