--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Overall</a></li>
+              <li><a href="overall">Overall</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Data by Country</a></li>
               <li><a href="#">Admissions</a></li>
