moving css around

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,16 +2,22 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <style>
 h1 {
   font-family: 'Open Sans', sans-serif;
   position: relative;
   bottom 30px;
+  left: 20px;
 }
 p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
+  position: relative;
+  left: 20px;
 }
 a {
   font-family: 'Montserrat', sans-serif;
@@ -19,6 +25,8 @@ a {
 ul {
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
+  position: relative;
+  left: 20px;
 }
 p.dhs {
   font-weight: bold;
@@ -30,10 +38,6 @@ img {
 }
 nav {
   font-family: 'Arial', sans-serif;
-}
-body {
-  position: relative;
-  left: 20px;
 }
 </style>
 </head>
