--- a/templates/about.html
+++ b/templates/about.html
@@ -39,6 +39,9 @@ img {
 nav a {
   font-family: 'Arial', sans-serif;
 }
+button {
+  font-family: 'Arial', sans-serif;
+}
 </style>
 </head>
 <body>
