--- a/templates/overall.html
+++ b/templates/overall.html
@@ -48,6 +48,6 @@
   </nav>
 <h1>Immigration Dataset | What you need to know</h1>
 <p>The immigration dataset is sorted by country and has been taken every year from 2005 to 2014</p>
-<p>There are {{countries}} countries in the dataset.</p>
+<p>There are 247 countries in the dataset.</p>
   </body>
 </html>
