--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <ul class="dropdown-menu">
               <li><a href="overall">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Data by Country</a></li>
+              <li><a href="databycountry">Data by Country</a></li>
               <li><a href="#">Admissions</a></li>
               <li><a href="#">Data by Year</a></li>
               <li role="separator" class="divider"></li>
