--- a/templates/countrydata.html
+++ b/templates/countrydata.html
@@ -49,5 +49,11 @@
 <h1>Data sorted by Country</h1>
 <p>The immigration dataset is sorted by country and has been taken every year from 2005 to 2014</p>
 <p>There are 247 countries in the dataset.</p>
+<form action="/response">
+<select name="State">
+{{ value }}
+</select>
+<input type="submit">
+</form>
   </body>
 </html>
