--- a/templates/countrydata.html
+++ b/templates/countrydata.html
@@ -50,7 +50,7 @@
 <p>The immigration dataset is sorted by country and has been taken every year from 2005 to 2014</p>
 <p>There are 247 countries in the dataset.</p>
 <form action="/response">
-<select name="State">
+<select name="Country">
 {{ value }}
 </select>
 <input type="submit">
