--- a/templates/about.html
+++ b/templates/about.html
@@ -67,7 +67,7 @@ button {
           <ul class="dropdown-menu">
             <li><a href="overall">Overall</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Data by Country</a></li>
+            <li><a href="databycountry">Data by Country</a></li>
             <li><a href="#">Admissions</a></li>
             <li><a href="#">Data by Year</a></li>
             <li role="separator" class="divider"></li>
