--- a/templates/yeardata.html
+++ b/templates/yeardata.html
@@ -50,10 +50,4 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-  <h1>Immigration Dataset | What you need to know</h1>
-  <p>The immigration dataset is sorted by country and has been taken every year from 2005 to 2014</p>
-  <p>There are 247 countries in the dataset.</p>
-  <p>Each country contains approximately 9 years of data.</p>
-</body>
-
-</html>
+  <h1>Data sorted by Country</h1>
