--- a/templates/about.html
+++ b/templates/about.html
@@ -77,10 +77,10 @@
               <li><a href="overall">Overall</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="databycountry">Data by Country</a></li>
-              <li><a href="#">Admissions</a></li>
-              <li><a href="#">Data by Year</a></li>
+              <li><a href="admissions">Admissions</a></li>
+              <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Visuals</a></li>
+              <li><a href="visual">Visuals</a></li>
             </ul>
           </li>
         </ul>
