--- a/templates/countrydata.html
+++ b/templates/countrydata.html
@@ -35,13 +35,13 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#" class="active">Overall</a></li>
+              <li><a href="overall" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Data by Country</a></li>
-              <li><a href="#">Admissions</a></li>
-              <li><a href="#">Data by Year</a></li>
+              <li><a href="admissions">Admissions</a></li>
+              <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Visuals</a></li>
+              <li><a href="visual">Visuals</a></li>
             </ul>
           </li>
         </ul>
