--- a/templates/visual.html
+++ b/templates/visual.html
@@ -35,11 +35,11 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#" class="active">Overall</a></li>
+              <li><a href="overall" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Data by Country</a></li>
-              <li><a href="#">Admissions</a></li>
-              <li><a href="#">Data by Year</a></li>
+              <li><a href="databycountry">Data by Country</a></li>
+              <li><a href="admissions">Admissions</a></li>
+              <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Visuals</a></li>
             </ul>
