making stuff work as fast as possible

--- a/templates/yeardata.html
+++ b/templates/yeardata.html
@@ -51,3 +51,11 @@
     <!-- /.container-fluid -->
   </nav>
   <h1>Data sorted by Year</h1>
+  <form action="/response">
+    <select name="Year">
+{{ value }}
+</select>
+    <input type="submit">
+  </form>
+  {{ fact }}
+  </html>
