enforcement is easier

--- a/templates/countrydata.html
+++ b/templates/countrydata.html
@@ -37,7 +37,7 @@
             <ul class="dropdown-menu">
               <li><a href="overall" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Data by Country</a></li>
+              <li><a href="#">Enforcement</a></li>
               <li><a href="admissions">Admissions</a></li>
               <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
@@ -50,7 +50,7 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-  <h1>Data sorted by Country</h1>
+  <h1>Enforcement</h1>
   <p>The immigration dataset is sorted by country and has been taken every year from 2005 to 2014</p>
   <p>There are 247 countries in the dataset.</p>
   <form action="/response">
