--- a/templates/overall.html
+++ b/templates/overall.html
@@ -37,7 +37,7 @@
             <ul class="dropdown-menu">
               <li><a href="#" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Data by Country</a></li>
+              <li><a href="#">Enforcement</a></li>
               <li><a href="#">Admissions</a></li>
               <li><a href="#">Data by Year</a></li>
               <li role="separator" class="divider"></li>
