--- a/templates/visual.html
+++ b/templates/visual.html
@@ -37,7 +37,7 @@
             <ul class="dropdown-menu">
               <li><a href="overall" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="databycountry">Data by Country</a></li>
+              <li><a href="databycountry">Enforcement</a></li>
               <li><a href="admissions">Admissions</a></li>
               <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
