nothing really changed

--- a/templates/admissions.html
+++ b/templates/admissions.html
@@ -51,3 +51,13 @@
     <!-- /.container-fluid -->
   </nav>
   <h1>Admissions</h1>
+  <form action="/response">
+    <select name="Country">
+{{ value }}
+</select>
+    <input type="submit">
+  </form>
+  {{ fact }}
+</body>
+
+</html>
