--- a/templates/overall.html
+++ b/templates/overall.html
@@ -37,11 +37,11 @@
             <ul class="dropdown-menu">
               <li><a href="#" class="active">Overall</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Enforcement</a></li>
-              <li><a href="#">Admissions</a></li>
-              <li><a href="#">Data by Year</a></li>
+              <li><a href="databycountry">Enforcement</a></li>
+              <li><a href="admissions">Admissions</a></li>
+              <li><a href="yeardata">Data by Year</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Visuals</a></li>
+              <li><a href="visual">Visuals</a></li>
             </ul>
           </li>
         </ul>
